# lecture-recorder

./: .gitignore  .gitmodules  README.md  download_service.py  main.py  postprocess_service.py  pyproject.toml  upload_service.py
postprocessing/: README.md  postprocess.sh
