[project]
name = "prednasky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.9",
    "schedule>=1.2.2",
    "typer>=0.17.4",
    "watchdog>=6.0.0",
    "yt-dlp>=2025.9.5",
]
